Adds dark theme

--- a/common/src/main/res/values/constants.xml
+++ b/common/src/main/res/values/constants.xml
@@ -1,8 +1,10 @@
 <resources>
 	<string name="app_name" translatable="false">Random Ticker</string>
 	<string name="license" translatable="false">Open Source Licenses</string>
-	<string name="pref_ringtone" translatable="false">pref_ringtone</string>
-	<string name="pref_license" translatable="false">pref_license</string>
-	<string name="pref_show_notification" translatable="false">pref_show_notification</string>
+	<string name="dark_theme" translatable="false">Dark Theme</string>
+	<string name="pref_ringtone_key" translatable="false">pref_ringtone</string>
+	<string name="pref_license_key" translatable="false">pref_license</string>
+	<string name="pref_show_notification_key" translatable="false">pref_show_notification</string>
 	<string name="pref_vibration_key" translatable="false">pref_vibration</string>
+	<string name="pref_dark_theme_key" translatable="false">pref_dark_theme</string>
 </resources>
