--- a/random-ticker-base/src/main/res/values/styles.xml
+++ b/random-ticker-base/src/main/res/values/styles.xml
@@ -1,16 +1,22 @@
 <resources>
 
 	<!-- Base application theme. -->
-	<style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+	<style name="AppTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
 		<item name="colorPrimary">@color/colorPrimary</item>
 		<item name="colorPrimaryDark">@color/colorPrimaryDark</item>
 		<item name="colorAccent">@color/colorAccent</item>
 	</style>
 
-	<style name="AppTheme.LicenseActivity" parent="Theme.AppCompat.Light.DarkActionBar">
+	<style name="AppTheme.LicenseActivity" parent="Theme.AppCompat.DayNight.DarkActionBar">
 		<item name="colorPrimary">@color/colorPrimary</item>
 		<item name="colorPrimaryDark">@color/colorPrimaryDark</item>
 	</style>
+
+	<style name="AppTheme.Dialog"/>
+
+	<style name="AppTheme.Dialog.Dark" parent="Theme.Design.BottomSheetDialog"/>
+
+	<style name="AppTheme.Dialog.Light" parent="Theme.Design.Light.BottomSheetDialog"/>
 
 	<style name="AppTheme.Button" parent="Widget.AppCompat.Button.Colored">
 		<item name="android:layout_height">wrap_content</item>
