--- a/common/src/main/res/xml/pref_general.xml
+++ b/common/src/main/res/xml/pref_general.xml
@@ -1,7 +1,7 @@
 <androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
 	<androidx.preference.Preference
-			android:key="@string/pref_ringtone"
+			android:key="@string/pref_ringtone_key"
 			android:title="@string/pref_title_ringtone"/>
 
 	<androidx.preference.CheckBoxPreference
@@ -11,15 +11,24 @@
 
 	<androidx.preference.CheckBoxPreference
 			android:summary="@string/show_notification_summary"
-			android:key="@string/pref_show_notification"
+			android:key="@string/pref_show_notification_key"
 			android:title="@string/show_notification"
 			android:defaultValue="false"/>
 
 	<androidx.preference.PreferenceCategory android:title="@string/license">
 
 		<androidx.preference.Preference
-				android:key="@string/pref_license"
+				android:key="@string/pref_license_key"
 				android:title="@string/license"/>
+
+	</androidx.preference.PreferenceCategory>
+
+	<androidx.preference.PreferenceCategory>
+
+		<androidx.preference.CheckBoxPreference
+				android:defaultValue="false"
+				android:key="@string/pref_dark_theme_key"
+				android:title="@string/dark_theme"/>
 
 	</androidx.preference.PreferenceCategory>
 </androidx.preference.PreferenceScreen>
