--- a/random-ticker-base/src/main/res/drawable/klaxon_background.xml
+++ b/random-ticker-base/src/main/res/drawable/klaxon_background.xml
@@ -4,5 +4,5 @@
 	<gradient
 			android:angle="270"
 			android:startColor="@color/colorPrimaryDark"
-			android:endColor="@android:color/white"/>
+			android:endColor="@color/gradientEndColor"/>
 </shape>
