--- a/random-ticker-base/src/main/res/values/colors.xml
+++ b/random-ticker-base/src/main/res/values/colors.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#9c27b0</color>
-    <color name="colorPrimaryDark">#7b1fa2</color>
-    <color name="colorAccent">#00c853</color>
+	<color name="colorPrimary">#9c27b0</color>
+	<color name="colorPrimaryDark">#7b1fa2</color>
+	<color name="colorAccent">#00c853</color>
 	<color name="contrastTextColor">#7b1fa2</color>
-    <color name="progressBackgroundColor">#eeeeee</color>
+	<color name="secondaryColor">#d1c4e9</color>
+	<color name="gradientEndColor">#d1c4e9</color>
 </resources>
