[Package] classes moved to correct packages

--- a/app/src/main/res/layout/activity_klaxon.xml
+++ b/app/src/main/res/layout/activity_klaxon.xml
@@ -9,7 +9,7 @@
 			  android:layout_height="match_parent"
 			  android:background="@drawable/klaxon_background"
 			  android:orientation="vertical"
-		tools:context="com.fanstaticapps.randomticker.ui.ticker.KlaxonActivity">
+		tools:context="com.fanstaticapps.randomticker.ui.klaxon.KlaxonActivity">
 
 
 	<com.airbnb.lottie.LottieAnimationView
