--- a/app/src/main/res/layout/activity_klaxon.xml
+++ b/app/src/main/res/layout/activity_klaxon.xml
@@ -1,73 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-			  xmlns:app="http://schemas.android.com/apk/res-auto"
-			  xmlns:tools="http://schemas.android.com/tools"
-			  android:id="@+id/root"
-			  android:keepScreenOn="true"
-			  android:animateLayoutChanges="true"
-			  android:layout_width="match_parent"
-			  android:layout_height="match_parent"
-			  android:background="@drawable/klaxon_background"
-			  android:orientation="vertical"
-		tools:context="com.fanstaticapps.randomticker.ui.klaxon.KlaxonActivity">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
+	xmlns:tools="http://schemas.android.com/tools"
+	android:id="@+id/root"
+	android:layout_width="match_parent"
+	android:layout_height="match_parent"
+	android:animateLayoutChanges="true"
+	android:background="@drawable/klaxon_background"
+	android:keepScreenOn="true"
+	tools:context="com.fanstaticapps.randomticker.ui.klaxon.KlaxonActivity">
 
 
 	<com.airbnb.lottie.LottieAnimationView
-			android:id="@+id/waitingIcon"
-			android:layout_width="match_parent"
-			android:layout_height="0dp"
-			android:layout_marginBottom="8dp"
-			android:layout_weight="2"
-			android:paddingTop="@dimen/sectionMargin"
-			android:paddingBottom="@dimen/sectionMargin"
-			app:lottie_rawRes="@raw/hourglass"
-			app:lottie_loop="true"
-			app:lottie_autoPlay="true"/>
+		android:id="@+id/waitingIcon"
+		android:layout_width="0dp"
+		android:layout_height="0dp"
+		android:layout_marginBottom="8dp"
+		android:paddingTop="@dimen/sectionMargin"
+		android:paddingBottom="@dimen/sectionMargin"
+		app:layout_constraintBottom_toTopOf="@+id/elapsedTime"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toTopOf="parent"
+		app:lottie_autoPlay="true"
+		app:lottie_loop="true"
+		app:lottie_rawRes="@raw/hourglass" />
 
 	<TextView
-			android:id="@+id/elapsedTime"
-			android:layout_gravity="center"
-			android:layout_width="wrap_content"
-			android:textAllCaps="true"
-			android:background="?attr/selectableItemBackground"
-			android:padding="8dp"
-			android:textStyle="bold"
-			android:fontFamily="monospace"
-			android:layout_height="wrap_content"
-			android:text="@string/show_elapsed_time"
-			android:textSize="@dimen/elepsedTimeTextSize"
-			android:textColor="@color/secondaryColor"/>
+		android:id="@+id/elapsedTime"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:background="?attr/selectableItemBackground"
+		android:fontFamily="monospace"
+		android:padding="8dp"
+		android:text="@string/show_elapsed_time"
+		android:textAllCaps="true"
+		android:textColor="@color/secondaryColor"
+		android:textSize="@dimen/elepsedTimeTextSize"
+		android:textStyle="bold"
+		app:layout_constraintBottom_toTopOf="@+id/pulsator"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toBottomOf="@+id/waitingIcon" />
 
 	<pl.bclogic.pulsator4droid.library.PulsatorLayout
-			android:id="@+id/pulsator"
-			android:layout_width="match_parent"
-			android:layout_height="0dp"
-			android:layout_gravity="center_horizontal"
-			android:layout_marginBottom="16dp"
-			android:layout_marginEnd="16dp"
-			android:layout_marginStart="16dp"
-			android:layout_weight="1"
-			android:gravity="center"
-			app:pulse_color="@color/secondaryColor"
-			app:pulse_count="4"
-			app:pulse_duration="4000"
-			app:pulse_interpolator="Linear"
-			app:pulse_repeat="0"
-			app:pulse_startFromScratch="true"
-			tools:layout_editor_absoluteX="16dp">
+		android:id="@+id/pulsator"
+		android:layout_width="0dp"
+		android:layout_height="0dp"
+		android:layout_marginStart="16dp"
+		android:layout_marginLeft="16dp"
+		android:layout_marginEnd="16dp"
+		android:layout_marginRight="16dp"
+		android:layout_marginBottom="16dp"
+		android:gravity="center"
+		app:layout_constraintBottom_toBottomOf="parent"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toBottomOf="@+id/elapsedTime"
+		app:pulse_color="@color/secondaryColor"
+		app:pulse_count="4"
+		app:pulse_duration="4000"
+		app:pulse_interpolator="Linear"
+		app:pulse_repeat="0"
+		app:pulse_startFromScratch="true">
 
 		<ImageView
-				android:id="@+id/dismissButton"
-				style="@style/Base.TextAppearance.AppCompat.Widget.Button"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:layout_centerInParent="true"
-				android:contentDescription="@android:string/cancel"
-				android:elevation="4dp"
-				android:minHeight="@dimen/dismissButtonMinSize"
-				android:minWidth="@dimen/dismissButtonMinSize"
-				android:src="@drawable/ic_cancel"
-				android:tint="@color/contrastTextColor"/>
+			android:id="@+id/dismissButton"
+			style="@style/Base.TextAppearance.AppCompat.Widget.Button"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_centerInParent="true"
+			android:contentDescription="@android:string/cancel"
+			android:elevation="4dp"
+			android:minWidth="@dimen/dismissButtonMinSize"
+			android:minHeight="@dimen/dismissButtonMinSize"
+			android:src="@drawable/ic_cancel"
+			android:tint="@color/contrastTextColor" />
 	</pl.bclogic.pulsator4droid.library.PulsatorLayout>
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
