--- a/app/src/main/res/layout/activity_klaxon.xml
+++ b/app/src/main/res/layout/activity_klaxon.xml
@@ -1,81 +1,97 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:app="http://schemas.android.com/apk/res-auto"
-	xmlns:tools="http://schemas.android.com/tools"
-	android:id="@+id/root"
-	android:layout_width="match_parent"
-	android:layout_height="match_parent"
-	android:animateLayoutChanges="true"
-	android:background="@drawable/klaxon_background"
-	android:keepScreenOn="true"
-	tools:context="com.fanstaticapps.randomticker.ui.klaxon.KlaxonActivity">
+<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
+		xmlns:app="http://schemas.android.com/apk/res-auto"
+		xmlns:tools="http://schemas.android.com/tools"
+		android:id="@+id/root"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:animateLayoutChanges="true"
+		android:background="@drawable/klaxon_background"
+		android:keepScreenOn="true"
+		app:applyMotionScene="true"
+		app:layoutDescription="@xml/activity_klaxon_scene"
+		app:motionDebug="SHOW_ALL"
+		app:motionProgress="0.5"
+		app:showPaths="true"
+		tools:context="com.fanstaticapps.randomticker.ui.klaxon.KlaxonActivity">
 
 
 	<com.airbnb.lottie.LottieAnimationView
-		android:id="@+id/waitingIcon"
-		android:layout_width="0dp"
-		android:layout_height="0dp"
-		android:layout_marginBottom="8dp"
-		android:paddingTop="@dimen/sectionMargin"
-		android:paddingBottom="@dimen/sectionMargin"
-		app:layout_constraintBottom_toTopOf="@+id/elapsedTime"
-		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toTopOf="parent"
-		app:lottie_autoPlay="true"
-		app:lottie_loop="true"
-		app:lottie_rawRes="@raw/hourglass" />
+			android:id="@+id/laWaiting"
+			android:layout_width="0dp"
+			android:layout_height="0dp"
+			android:layout_marginBottom="8dp"
+			android:paddingTop="@dimen/sectionMargin"
+			android:paddingBottom="@dimen/sectionMargin"
+			app:layout_constraintBottom_toTopOf="@+id/tvElapsedTime"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintTop_toTopOf="parent"
+			app:lottie_autoPlay="true"
+			app:lottie_loop="true"
+			app:lottie_rawRes="@raw/hourglass" />
 
 	<TextView
-		android:id="@+id/elapsedTime"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:background="?attr/selectableItemBackground"
-		android:fontFamily="monospace"
-		android:padding="8dp"
-		android:text="@string/show_elapsed_time"
-		android:textAllCaps="true"
-		android:textColor="@color/secondaryColor"
-		android:textSize="@dimen/elepsedTimeTextSize"
-		android:textStyle="bold"
-		app:layout_constraintBottom_toTopOf="@+id/pulsator"
-		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toBottomOf="@+id/waitingIcon" />
-
-	<pl.bclogic.pulsator4droid.library.PulsatorLayout
-		android:id="@+id/pulsator"
-		android:layout_width="0dp"
-		android:layout_height="0dp"
-		android:layout_marginStart="16dp"
-		android:layout_marginLeft="16dp"
-		android:layout_marginEnd="16dp"
-		android:layout_marginRight="16dp"
-		android:layout_marginBottom="16dp"
-		android:gravity="center"
-		app:layout_constraintBottom_toBottomOf="parent"
-		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toBottomOf="@+id/elapsedTime"
-		app:pulse_color="@color/secondaryColor"
-		app:pulse_count="4"
-		app:pulse_duration="4000"
-		app:pulse_interpolator="Linear"
-		app:pulse_repeat="0"
-		app:pulse_startFromScratch="true">
-
-		<ImageView
-			android:id="@+id/dismissButton"
-			style="@style/Base.TextAppearance.AppCompat.Widget.Button"
+			android:id="@+id/tvElapsedTime"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:layout_centerInParent="true"
-			android:contentDescription="@android:string/cancel"
-			android:elevation="4dp"
-			android:minWidth="@dimen/dismissButtonMinSize"
-			android:minHeight="@dimen/dismissButtonMinSize"
-			android:src="@drawable/ic_cancel"
-			android:tint="@color/contrastTextColor" />
+			android:background="?attr/selectableItemBackground"
+			android:fontFamily="monospace"
+			android:padding="8dp"
+			android:text="@string/show_elapsed_time"
+			android:textAllCaps="true"
+			android:textColor="@color/secondaryColor"
+			android:textSize="@dimen/elepsedTimeTextSize"
+			android:textStyle="bold"
+			app:layout_constraintBottom_toTopOf="@id/btnRepeat"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintStart_toStartOf="parent" />
+
+	<Button
+			android:id="@+id/btnRepeat"
+			style="@style/Widget.AppCompat.Button.Borderless"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:text="@string/action_repeat"
+			android:textSize="24sp"
+			android:visibility="gone"
+			app:layout_constraintBottom_toTopOf="@id/plDismiss"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintStart_toStartOf="parent" />
+
+	<pl.bclogic.pulsator4droid.library.PulsatorLayout
+			android:id="@+id/plDismiss"
+			android:layout_width="0dp"
+			android:layout_height="0dp"
+			android:layout_marginStart="16dp"
+			android:layout_marginLeft="16dp"
+			android:layout_marginEnd="16dp"
+			android:layout_marginRight="16dp"
+			android:layout_marginBottom="16dp"
+			android:gravity="center"
+			app:layout_constraintBottom_toBottomOf="parent"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintHeight_percent="0.4"
+			app:layout_constraintStart_toStartOf="parent"
+			app:pulse_color="@color/secondaryColor"
+			app:pulse_count="4"
+			app:pulse_duration="4000"
+			app:pulse_interpolator="Linear"
+			app:pulse_repeat="0"
+			app:pulse_startFromScratch="true">
+
+		<ImageView
+				android:id="@+id/btnDismiss"
+				style="@style/Base.TextAppearance.AppCompat.Widget.Button"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_centerInParent="true"
+				android:contentDescription="@android:string/cancel"
+				android:elevation="4dp"
+				android:minWidth="@dimen/dismissButtonMinSize"
+				android:minHeight="@dimen/dismissButtonMinSize"
+				android:src="@drawable/ic_cancel"
+				android:tint="@color/contrastTextColor" />
 	</pl.bclogic.pulsator4droid.library.PulsatorLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.constraintlayout.motion.widget.MotionLayout>
