--- a/app/src/main/res/xml/activity_klaxon_scene.xml
+++ b/app/src/main/res/xml/activity_klaxon_scene.xml
@@ -2,24 +2,26 @@
 <MotionScene xmlns:android="http://schemas.android.com/apk/res/android"
 		xmlns:app="http://schemas.android.com/apk/res-auto">
 
-	<ConstraintSet android:id="@+id/start">
+	<ConstraintSet android:id="@+id/waiting">
 		<Constraint android:id="@+id/laWaiting" />
 		<Constraint android:id="@+id/tvElapsedTime" />
 		<Constraint android:id="@+id/btnRepeat" />
 	</ConstraintSet>
 
-	<ConstraintSet android:id="@+id/end">
+	<ConstraintSet android:id="@+id/ringing">
 		<Constraint
 				android:id="@id/laWaiting"
 				android:visibility="gone" />
 		<Constraint
 				android:id="@id/tvElapsedTime"
-				android:scaleX="4"
-				android:scaleY="4"
 				app:layout_constraintBottom_toTopOf="@id/btnRepeat"
 				app:layout_constraintEnd_toEndOf="parent"
 				app:layout_constraintStart_toStartOf="parent"
-				app:layout_constraintTop_toTopOf="parent" />
+				app:layout_constraintTop_toTopOf="parent">
+			<CustomAttribute
+					app:attributeName="textSize"
+					app:customDimension="@dimen/elepsedTimeTextSizeZoomed" />
+		</Constraint>
 		<Constraint
 				android:id="@id/btnRepeat"
 				android:layout_height="48dp"
@@ -31,8 +33,10 @@
 	</ConstraintSet>
 
 	<Transition
-			app:constraintSetEnd="@id/end"
-			app:constraintSetStart="@+id/start">
+			app:constraintSetEnd="@id/ringing"
+			app:constraintSetStart="@+id/waiting"
+			app:duration="500"
+			app:motionInterpolator="easeInOut">
 		<OnClick
 				app:clickAction="jumpToStart"
 				app:targetId="@id/btnRepeat" />
