--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,7 +9,7 @@
 	<dimen name="contentPadding">16dp</dimen>
 	<dimen name="editTextPadding">16dp</dimen>
 	<dimen name="editTextMinWidth">100dp</dimen>
-	<dimen name="elepsedTimeTextSizeZoomed">36sp</dimen>
-	<dimen name="elepsedTimeTextSize">14sp</dimen>
+	<dimen name="elapsedTimeTextSizeZoomed">36sp</dimen>
+	<dimen name="elapsedTimeTextSize">14sp</dimen>
 	<dimen name="touchHeight">48sp</dimen>
 </resources>
