--- a/app/src/main/res/layout/app_bar.xml
+++ b/app/src/main/res/layout/app_bar.xml
@@ -2,13 +2,15 @@
 <com.google.android.material.appbar.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
 		xmlns:app="http://schemas.android.com/apk/res-auto"
 		android:layout_width="match_parent"
-		android:layout_height="wrap_content">
+		android:layout_height="wrap_content"
+		android:theme="@style/AppTheme.AppBarOverlay">
 
 	<androidx.appcompat.widget.Toolbar
 			android:id="@+id/toolbar"
-			style="@style/Widget.MaterialComponents.Toolbar.Primary"
 			android:layout_width="match_parent"
 			android:layout_height="?attr/actionBarSize"
+			android:background="?attr/colorPrimary"
+			app:popupTheme="@style/AppTheme.PopupOverlay"
 			app:title="@string/app_name" />
 
 </com.google.android.material.appbar.AppBarLayout>
