--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -6,7 +6,7 @@
 
 	<include layout="@layout/app_bar" />
 
-	<fragment
+	<androidx.fragment.app.FragmentContainerView
 			android:id="@+id/notificationFragment"
 			android:name="com.fanstaticapps.randomticker.ui.preferences.NotificationPreferenceFragment"
 			android:layout_width="match_parent"
