--- a/app/src/main/res/drawable/bookmark_background.xml
+++ b/app/src/main/res/drawable/bookmark_background.xml
@@ -1,25 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ripple
-		xmlns:android="http://schemas.android.com/apk/res/android"
-		android:color="@color/colorAccent">
+<ripple xmlns:android="http://schemas.android.com/apk/res/android"
+		android:color="?attr/colorControlNormal">
 	<item>
-		<selector xmlns:android="http://schemas.android.com/apk/res/android">
+		<selector>
 			<item android:state_activated="true">
 				<shape android:shape="rectangle">
 					<stroke
 							android:width="2dp"
-							android:color="@color/colorPrimary"/>
-					<corners android:radius="2dp"/>
-					<solid android:color="@android:color/white"/>
+							android:color="@color/primaryColor" />
+					<corners android:radius="2dp" />
+					<solid android:color="@android:color/white" />
 				</shape>
 			</item>
 			<item>
 				<shape android:shape="rectangle">
-					<solid android:color="@android:color/white"/>
+					<solid android:color="@android:color/white" />
 					<stroke
 							android:width="2dp"
-							android:color="@color/colorAccent"/>
-					<corners android:radius="2dp"/>
+							android:color="@color/secondaryColor" />
+					<corners android:radius="2dp" />
 				</shape>
 			</item>
 
