--- a/app/src/main/res/values/styles-themes.xml
+++ b/app/src/main/res/values/styles-themes.xml
@@ -5,6 +5,7 @@
 		<item name="colorPrimary">@color/primaryColor</item>
 		<item name="colorPrimaryVariant">@color/primaryDarkColor</item>
 		<item name="colorOnPrimary">@color/primaryTextColor</item>
+		<item name="colorControlNormal">@color/secondaryColor</item>
 		<item name="colorSecondary">@color/secondaryColor</item>
 		<item name="colorSecondaryVariant">@color/secondaryDarkColor</item>
 		<item name="colorOnSecondary">@color/secondaryTextColor</item>
