--- a/app/src/main/res/layout/content_maximum_value.xml
+++ b/app/src/main/res/layout/content_maximum_value.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
 		xmlns:app="http://schemas.android.com/apk/res-auto"
 		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		app:contentPadding="@dimen/contentPadding">
+		android:layout_height="wrap_content">
 
 	<androidx.constraintlayout.widget.ConstraintLayout
 			android:layout_width="match_parent"
@@ -73,4 +72,4 @@
 				app:layout_constraintStart_toStartOf="@id/maxSec"
 				app:layout_constraintTop_toTopOf="@id/maxSec" />
 	</androidx.constraintlayout.widget.ConstraintLayout>
-</androidx.cardview.widget.CardView>
+</com.google.android.material.card.MaterialCardView>
