--- a/app/src/main/res/values/styles-themes.xml
+++ b/app/src/main/res/values/styles-themes.xml
@@ -15,14 +15,23 @@
 		<item name="colorOnSurface">#212121</item>
 		<item name="android:colorBackground">@color/background</item>
 		<item name="colorOnBackground">#212121</item>
-
 		<item name="android:statusBarColor">@color/primaryDarkColor</item>
 
+		<item name="shapeAppearanceSmallComponent">@style/ShapeAppearance.SmallComponent</item>
+		<item name="shapeAppearanceMediumComponent">@style/ShapeAppearance.MediumComponent</item>
+		<item name="shapeAppearanceLargeComponent">@style/ShapeAppearance.LargeComponent</item>
+		<item name="materialCardViewStyle">@style/CardViewStyle</item>
 	</style>
 
 	<style name="AppTheme.LicenseActivity" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
 		<item name="colorPrimary">@color/primaryColor</item>
 		<item name="colorPrimaryVariant">@color/primaryDarkColor</item>
 	</style>
+
+	<style name="AppTheme.Dialog" />
+
+	<style name="AppTheme.Dialog.Dark" parent="Theme.MaterialComponents.BottomSheetDialog" />
+
+	<style name="AppTheme.Dialog.Light" parent="Theme.MaterialComponents.Light.BottomSheetDialog" />
 
 </resources>
