--- a/app/src/main/res/layout/content_bookmarks.xml
+++ b/app/src/main/res/layout/content_bookmarks.xml
@@ -15,8 +15,8 @@
 
 	<Button
 			android:id="@+id/btnSelectProfile"
-			style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
+			style="@style/Widget.MaterialComponents.Button.TextButton"
 			android:text="@string/button_select_profile"
 			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"/>
+			android:layout_height="wrap_content" />
 </LinearLayout>
