--- a/app/src/main/res/layout/activity_klaxon.xml
+++ b/app/src/main/res/layout/activity_klaxon.xml
@@ -25,6 +25,7 @@
 			app:layout_constraintStart_toStartOf="parent"
 			app:layout_constraintTop_toTopOf="parent"
 			app:lottie_autoPlay="true"
+			app:lottie_enableMergePathsForKitKatAndAbove="true"
 			app:lottie_loop="true"
 			app:lottie_rawRes="@raw/hourglass" />
 
