--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,4 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-	<color name="background">#180c01</color>
+    <color name="primaryColor">#6d4c41</color>
+    <color name="primaryLightColor">#9c786c</color>
+    <color name="primaryDarkColor">#40241a</color>
+    <color name="secondaryColor">#33691e</color>
+    <color name="secondaryLightColor">#629749</color>
+    <color name="secondaryDarkColor">#003d00</color>
+    <color name="primaryTextColor">#ffffff</color>
+    <color name="secondaryTextColor">#ffffff</color>
+
+    <color name="background">#121212</color>
 </resources>
